# futurestack

./: README.md  docker-compose.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: llmhub.py  settings.py
backend/app/agents/: events.py  ideator_inc_workflow.py  workflow.py  workflow_all_flows.html
backend/app/agents/example/: analyst.py  reporter.py  researcher.py  workflow.py
backend/app/agents/resources/: subreddit_groups.json
backend/app/agents/stage_1_problem_definition/: __init__.py  idea_prescreener.py
backend/app/agents/stage_2_initial_research/: __init__.py
backend/app/agents/stage_2_initial_research/competitor_analysis/: competitor_analyzer.py  competitor_researcher.py  competitor_searcher.py  report_critic.py  workflow.py
backend/app/agents/stage_3_research_reviewer/: __init__.py  research_reviewer.py
backend/app/agents/stage_4_feasibility_research/: __init__.py  finance_feasibility.py  operations_feasibility.py  tech_feasibility.py
backend/app/agents/stage_5_strategy_research/: __init__.py  go_to_market.py  monetization.py  risk_analysis.py
backend/app/agents/stage_6_output_production/: __init__.py  landing_page_poc.py
backend/app/agents/stage_6_output_production/podcaster/: models.py  (+5 more)
backend/app/api/routers/: __init__.py  chat.py  health.py  models.py  validate.py  vercel_response.py
backend/app/engine/: engine.py
backend/app/engine/llms/: __init__.py  cerebras_llm.py
backend/app/engine/tools/: __init__.py  document_generator.py  email.py  file_writer.py  google_trends.py  mcp_client.py  mcp_server.py  podcast_generator.py  tavily.py  web_reader.py
backend/app/utils/: guardrails_validator.py  json_extractor.py  json_validator.py  paths.py
backend/app/workflows/: planner.py  react.py  single.py
backend/config/: tools.yaml
(+50 files in other folders)
